# one-context-mcp

./: .gitignore  AGENT_PROMPT.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INSTALLATION_GUIDE.md  README.md  _check_names.py  pyproject.toml  run_ctx.bat
.github/workflows/: ci.yml
ctx/: __init__.py  cli.py  database.py  git.py  llm.py  mirror.py  server.py
tests/: conftest.py  test_caps.py  test_concurrency.py  test_database.py  test_docs.py  test_export_import.py  test_git.py  test_http_auth.py  test_isolation.py  test_llm_local.py  test_mirror.py  test_provenance.py  test_tools.py
