[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "one-ctx"
version = "0.2.1"
description = "Local MCP server that shares project context across Claude, Cline, Codex, and other AI tools."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "context", "claude", "cline", "codex", "ai-tools", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "anyio>=4.0.0",
    "mcp[cli]>=1.0.0",
    "uvicorn[standard]>=0.29.0",
    "click>=8.1.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]

[project.scripts]
ctx = "ctx.cli:cli"
one-context = "ctx.cli:cli"
one-ctx = "ctx.cli:cli"

[project.urls]
Homepage = "https://github.com/m4vic/one-context-mcp"
Repository = "https://github.com/m4vic/one-context-mcp"
Issues = "https://github.com/m4vic/one-context-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["ctx"]
